// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelperErrorText Renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  dangerouslySetInnerHTML={
    {
      "__html": "Text",
    }
  }
  data-isinvalid={false}
  data-testid="ds-helperErrorText"
  id="basic"
/>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  dangerouslySetInnerHTML={
    {
      "__html": "Text",
    }
  }
  data-isinvalid={true}
  data-testid="ds-helperErrorText"
  id="invalid"
/>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  dangerouslySetInnerHTML={
    {
      "__html": "This helper text <b>contains HTML in the string</b>.",
    }
  }
  data-isinvalid={true}
  data-testid="ds-helperErrorText"
  id="invalid"
/>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  data-isinvalid={true}
  data-testid="ds-helperErrorText"
  id="invalid"
>
  This helper text 
  <b>
    contains HTML
  </b>
  .
</div>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 5`] = `
<div
  className="css-10g9ftz"
  dangerouslySetInnerHTML={
    {
      "__html": "Text",
    }
  }
  data-isinvalid={false}
  data-testid="ds-helperErrorText"
  id="chakra"
/>
`;

exports[`HelperErrorText Renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  dangerouslySetInnerHTML={
    {
      "__html": "Text",
    }
  }
  data-isinvalid={false}
  data-testid="props"
  id="props"
/>
`;
